move_semantics3/stdout.txt
Checking test execution result...
[!] Test execution result: FAILED
Checking source code format...
  Preparing source code for format check...
  Running format check...
// =====================================================
//  Running cargo fmt...
// =====================================================

// =====================================================
//    Running cargo clippy...
// =====================================================

    Checking format_check v0.1.0 (/home/runner/work/rustlings-zaychyk/rustlings-zaychyk/format_check)
error[E0596]: cannot borrow `vec` as mutable, as it is not declared as mutable
  --> src/lib.rs:23:13
   |
23 | fn fill_vec(vec: Vec<i32>) -> Vec<i32> {
   |             ^^^ not mutable
24 |     vec.push(22);
   |     --- cannot borrow as mutable
25 |     vec.push(44);
   |     --- cannot borrow as mutable
26 |     vec.push(66);
   |     --- cannot borrow as mutable
   |
help: consider changing this to be mutable
   |
23 | fn fill_vec(mut vec: Vec<i32>) -> Vec<i32> {
   |             +++

For more information about this error, try `rustc --explain E0596`.
error: could not compile `format_check` (lib) due to 1 previous error

[!] Source code format check: FAILED
